[package]
name = "hauk-backend-rs"
version = "0.1.0"
authors = ["meltinglava <roi1996@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib = "0.4.2"
tracing = "0.1.10"
rand = "0.7.2"
uuid = {version = "0.8.1", features = ["v4"]}
